src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v3/content/child-1~fcr-desc.nt
<info:fedora/ag/child-1/fcr:metadata> <http://purl.org/dc/elements/1.1/title> "Child 1" .
